--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.2.2",
+    "date-fns": "^4.1.0",
     "geist": "^1.4.2",
     "lucide-react": "^0.509.0",
     "next": "15.3.1",
